--- a/css/index.css
+++ b/css/index.css
@@ -26,21 +26,25 @@
 
 .red {
     background-color: red;
+    text-decoration-color: red;
     opacity: .3;
 }
 
 .green {
     background-color: green;
+    text-decoration-color: green;
     opacity: .3;
 }
 
 .blue {
     background-color: blue;
+    text-decoration-color: blue;
     opacity: .3;
 }
 
 .yellow {
     background-color: yellow;
+    text-decoration-color: yellow;
     opacity: .3;
 }
 
